fixed the spacing of some components

--- a/frontend/app/components/BookingStatusDetails.module.scss
+++ b/frontend/app/components/BookingStatusDetails.module.scss
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: center;
     padding: 0 10%;
-    margin-bottom: 26px;
+    margin-top: 65px;
 }
 
 .booking-status-details-container {
