--- a/frontend/app/components/BookingStatusReupload.module.scss
+++ b/frontend/app/components/BookingStatusReupload.module.scss
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: center;
     padding: 0 10%;
-    padding-bottom: 75px;
+    margin-top: 65px;
 }
 
 .booking-status-reupload-container {
